k8s/monitoring/ingress-monitoring.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: monitoring-ingress
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /$1
spec:
  rules:
   - host: grafana.monitoring
     http:
      paths:
        - path: /(.*)
          pathType: ImplementationSpecific
          backend:
            service:
              name: grafana
              port:
                number: 3000
